crates/vize_atelier_sfc/src/script/snapshots/vize_atelier_sfc__script__import_usage_check__tests__custom_directive.snap
---
source: crates/vize_atelier_sfc/src/script/import_usage_check.rs
expression: snapshot_identifiers(&result)
---
(
    [
        "vFocus",
    ],
    [],
)
